# agda-sct

./: .gitignore  README.md  agda-sct.cabal  xtc.xsd
src/: Main.hs
src/Agda/SCT/: FromAgda.hs  Syntax.hs  ToXML.hs
test/: fail.agda  first.agda
