name:                agda-sct
version:             0.1.0.0
synopsis:            -
description:         Agda backend for SizeChangeTool
author:              Jesper Cockx
maintainer:          jesper@sikanda.be
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable agda-sct
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       Agda >= 2.6 && < 3
                     , base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , mtl >= 2.2.2
                     , pretty >= 1.1.3.3
                     , text >= 1.2.3.1
                     , unordered-containers >= 0.2.9.0
                     , xml >= 1.3 && < 2
  ghc-options:         -Werror
  default-language:    Haskell2010

  
  default-extensions:  ConstraintKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeSynonymInstances

  
source-repository head
  type:     git
  location: git@github.com:jespercockx/agda-sct.git